--- a/style.css
+++ b/style.css
@@ -12,27 +12,61 @@
   font-style: italic;
 }
 
-body {
+:root {
+  --pc: #C95878;
+  --lpc: #c9587850;
+  --sc: #e8aa58;
+  --lsc: #e8aa5821;
+  --lc: #81C958;
+  --tc: #242038;
+  --lgc: #f4f4f4;
+  --gc: #a1a1a1;
+  --dgc: #585858;
+  --pcg: linear-gradient(45deg, var(--sc), var(--pc));
+  --scg: linear-gradient(45deg, var(--sc), var(--lc));
+}
+
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: "Raleway";
   scroll-behavior: smooth;
 }
 
 .dba-container {
   width: 100%;
-  max-width: 1280px;
+  max-width: 1180px;
   margin: 0 auto;
-  padding: 2rem 15;
+  padding: 4rem 15px;
+}
+
+.dba-header .dba-container {
+    padding: 15px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+    background: rgba(255,255,255,0.8);
+    border-radius: 100px;
+}
+
+.dba-header .dba-container nav {
+    padding-left: 20px;
+    border-left: 3px solid green;
 }
 
 .dba-header {
-  background: #111;
-  color: #fff;
-  padding: 1rem 0;
+  color: var(--tc);
+  padding: 1rem 15px;
+  position: sticky;
+  top: 0;
 }
 
 .dba-header .dba-logo {
-  font-size: 1.5rem;
+  font-size: 16px;
+  margin: 0;
 }
 
 .dba-nav ul {
@@ -40,38 +74,85 @@ body {
   gap: 1rem;
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 
 .dba-nav a {
-  color: #fff;
+  color: var(--tc);
   text-decoration: none;
+  font-size: 16px;
+  transition: all 0.2s linear;
+  position: relative;
+}
+
+.dba-nav a.active:after {
+    position: absolute;
+    width: 50%;
+    background: var(--lpc);
+    content:"";
+    bottom: -2px;
+    top: -2px;
+    right: 0;
+}
+
+
+.dba-nav a:hover {
+    color: var(--pc);
 }
 
 .dba-hero {
-  background: #f4f4f4;
+  border-bottom: 2px solid #f2f2f2;
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
+
+.dba-hero .dba-container {
+    display: flex;
+    gap: 60px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
 .dba-hero-text {
   max-width: 600px;
 }
 
+.dba-hero-text h2 {
+    font-size: 54px;
+    line-height: 1.25;
+    color: var(--tc);
+    margin: 0 0 20px;
+}
+
+.dba-hero-text p {
+    font-size: 16px;
+    color: grey;
+    margin: 0 0 40px;
+}
+
+.dba-hero .dba-container img {
+    max-width: 400px;
+    height: auto;
+}
+
 .dba-cta-btn {
   display: inline-block;
-  margin-top: 1rem;
-  padding: 0.75rem 1.5rem;
-  background: #111;
+  padding: 15px 25px;
+  background: var(--pc);
   color: #fff;
   text-decoration: none;
-  border-radius: 5px;
-  transition: background 0.3s;
+  border-radius: 100px;
+  font-size: 16px;
+  transition: all 0.2s linear;
 }
 
 .dba-cta-btn:hover {
-  background: #333;
+  background: var(--sc);
+  color: #fff;
+  margin: 0 0 0 5px;
 }
 
 .dba-section h2 {
